[v1.0]-配置升级为17.0